test/compile_errors/err_keyword_as_var_const.w
//! expect-check-fail: expected identifier
let const = 42
fn main:
    let x = 1
